@@ -1,3 +1,6 @@
+Thu Aug 27 14:31:52 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/unittests/genparams.c: update genparams test
+
 Wed Aug 26 14:31:33 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/odbc/sql2tds.c src/odbc/unittests/genparams.c src/tds/data.c:
 	* src/tds/query.c src/tds/tds_checks.c src/tds/token.c:
@@ -1813,4 +1816,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.2862 2009-08-26 12:32:11 freddy77 Exp $
+$Id: ChangeLog,v 1.2863 2009-08-27 12:32:14 freddy77 Exp $
